Isolated `NavigatingIterable` from `LaneStructure`. (Issue #139)